--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a>Book Review</a></li>
+                    <li><a href="eloquent-ruby.html">Book Review</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
