create empty by specific css style sheets per page. Link first base then specific style sheet.

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
     <head>
         <link href="styles/style.css" rel="stylesheet">
+        <link href="styles/contact.css" rel="stylesheet">
         <meta charset="UTF-8" />
         <title>Contact</title>
     </head>
