--- a/eloquent-ruby.html
+++ b/eloquent-ruby.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="styles/style.css" rel="stylesheet">
+        <link href="styles/eloquent-ruby.css" rel="stylesheet">
         <meta charset="UTF-8" />
         <title>Eloquent Ruby</title>
     </head>
