--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <link href="styles/style.css" rel="stylesheet">
+        <link href="styles/index.css" rel="stylesheet">
     </head>
     <meta charset="UTF-8" />
     <title>Book Review Site</title>
