last of the styles requested in wave2

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,8 @@
                 <li>Email: <a href="#">trish@somemadeupemail.com</a></li>
             </ul>
         </main>
-
+        <footer>
+            <p>© 2021 Griego</p>
+        </footer>
     </body>
 </html>
